# qa_guru_19

./: pyproject.toml
tests/: conftest.py
tests/android/: test_wiki.py
tests/ios/: test_wiki.py
